# donut_tell_me

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: release.yaml
assets/Character Pack/Spritesheet/: sheet_face.atlas.json  sheet_hair.atlas.json  sheet_pants.atlas.json  sheet_shirts.atlas.json  sheet_shoes.atlas.json  sheet_skin.atlas.json
assets/Donuts/Spritesheet/: donuts_sheet.atlas.json
assets/Emote Pack/Spritesheets/: vector_style1.atlas.json
src/: assets.rs  component.rs  components.rs  main.rs  system.rs
