[package]
name = "donut_tell_me"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8"
rand = "0.8.5"
serde = "1.0"
bevy_asset_loader = "0.12.1"
bevy_common_assets = { version = "0.3", features = ["json"]}
bevy-inspector-egui = "0.12.1"
bevy_ninepatch = "0.8"

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }